--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
 <title>Latihan Reading Korea</title>
 
 <style>
-body{
-    margin:0;
-    font-family:'Segoe UI',Arial,sans-serif;
-    background:#f5f5f5;
-}
+body{margin:0;font-family:Segoe UI,Arial,sans-serif;background:#f5f5f5}
 
 /* LOGIN */
 #login-page{
@@ -34,17 +30,12 @@ body{
     box-shadow:0 15px 40px rgba(0,0,0,.4);
 }
 
-.login-container h1{color:#1a237e}
-.login-container h2{color:#4a148c}
-.login-container p{color:#555}
-
 input{
     width:100%;
     padding:14px;
     margin:10px 0;
     border-radius:12px;
     border:2px solid #bbb;
-    font-size:1em;
 }
 
 button{
@@ -55,15 +46,12 @@ button{
     color:#fff;
     border:none;
     border-radius:12px;
-    font-size:1.1em;
     font-weight:bold;
     cursor:pointer;
 }
 
-button:hover{background:#283593}
-
 /* QUIZ */
-#quiz-page{display:none;min-height:100vh}
+#quiz-page{display:none}
 
 .header-fixed{
     position:fixed;
@@ -79,18 +67,15 @@ button:hover{background:#283593}
     align-items:center;
 }
 
-.timer, .submit-top{
-    background:#4caf50;
-    color:#fff;
+.timer,.submit-top{
     padding:10px 18px;
     border-radius:12px;
+    color:#fff;
     font-weight:bold;
 }
 
-.submit-top{
-    background:#f44336;
-    cursor:pointer;
-}
+.timer{background:#4caf50}
+.submit-top{background:#f44336}
 
 .container{
     max-width:600px;
@@ -101,42 +86,6 @@ button:hover{background:#283593}
 
 .question-wrapper{display:none}
 .question-wrapper.active{display:block}
-
-.box-passage{
-    background:#e3f2fd;
-    padding:20px;
-    border-radius:16px;
-    margin-bottom:15px;
-}
-
-.box-question{
-    background:#fff3e0;
-    padding:20px;
-    border-radius:16px;
-}
-
-.options{margin-top:20px}
-
-.option-item{
-    display:flex;
-    align-items:center;
-    margin:12px 0;
-}
-
-.option-number{
-    width:32px;
-    height:32px;
-    border-radius:50%;
-    background:#3f51b5;
-    color:#fff;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    font-weight:bold;
-    margin-right:12px;
-}
-
-.option-text{flex:1}
 
 .nav-bottom{
     position:fixed;
@@ -149,7 +98,6 @@ button:hover{background:#283593}
     padding:10px;
     box-shadow:0 -4px 10px rgba(0,0,0,.1);
 }
-
 .nav-bottom button{flex:1}
 </style>
 </head>
@@ -187,7 +135,11 @@ button:hover{background:#283593}
 </div>
 
 <script>
-document.addEventListener("DOMContentLoaded",()=>{
+document.addEventListener("DOMContentLoaded",function(){
+
+const loginPage=document.getElementById("login-page");
+const quizPage=document.getElementById("quiz-page");
+const btnLogin=document.getElementById("btnLogin");
 
 const validCredentials={
     "uus":"123",
@@ -199,19 +151,18 @@ const kodeMapping={
     "A09008":"soal2.json"
 };
 
-let current=0;
-let questions=[];
+let questions=[],current=0;
 
-document.getElementById("btnLogin").addEventListener("click",login);
+btnLogin.addEventListener("click",login);
 
 function login(){
-    const u=username.value.trim();
-    const p=password.value.trim();
-    const k=kode.value.trim().toUpperCase();
+    const u=document.getElementById("username").value.trim();
+    const p=document.getElementById("password").value.trim();
+    const k=document.getElementById("kode").value.trim().toUpperCase();
 
     if(validCredentials[u] && validCredentials[u]===p && kodeMapping[k]){
-        login-page.style.display="none";
-        quiz-page.style.display="block";
+        loginPage.style.display="none";
+        quizPage.style.display="block";
         loadSoal(kodeMapping[k]);
     }else{
         alert("Username, Password, atau Kode Soal salah bro!");
@@ -226,27 +177,16 @@ async function loadSoal(file){
 }
 
 function render(){
-    quiz-form.innerHTML="";
+    const form=document.getElementById("quiz-form");
+    form.innerHTML="";
     questions.forEach((q,i)=>{
         const div=document.createElement("div");
         div.className="question-wrapper";
         div.innerHTML=`
-        <div class="box-passage">
-            ${q.audio?`<audio controls src="${q.audio}"></audio>`:""}
-            ${q.image?`<img src="${q.image}" style="max-width:100%">`:""}
-        </div>
-        <div class="box-question">
-            <p><strong>${q.question}</strong></p>
-            <div class="options">
-                ${Object.entries(q.options).map((o,j)=>`
-                <label class="option-item">
-                    <span class="option-number">${j+1}</span>
-                    <input type="radio" name="q${i}" style="display:none">
-                    <span class="option-text">${o[1]}</span>
-                </label>`).join("")}
-            </div>
-        </div>`;
-        quiz-form.appendChild(div);
+        ${q.audio?`<audio controls src="${q.audio}" style="width:100%"></audio>`:""}
+        ${q.image?`<img src="${q.image}" style="max-width:100%">`:""}
+        <p><strong>${q.question}</strong></p>`;
+        form.appendChild(div);
     });
 }
 
@@ -257,11 +197,12 @@ function show(n){
     current=n;
 }
 
-prev.onclick=()=>current>0&&show(current-1);
-next.onclick=()=>current<questions.length-1&&show(current+1);
-submitTop.onclick=()=>alert("SUBMIT OK");
+document.getElementById("prev").onclick=()=>current>0&&show(current-1);
+document.getElementById("next").onclick=()=>current<questions.length-1&&show(current+1);
+document.getElementById("submitTop").onclick=()=>alert("SUBMIT OK");
 
 });
 </script>
+
 </body>
 </html>
