--- a/index.html
+++ b/index.html
@@ -6,97 +6,105 @@
 <title>Latihan Reading Korea</title>
 
 <style>
-body{margin:0;font-family:Segoe UI,Arial,sans-serif;background:#f5f5f5}
+body{
+  margin:0;
+  font-family:'Segoe UI',Arial,sans-serif;
+  background:#f5f5f5;
+}
 
 /* LOGIN */
 #login-page{
-    min-height:100vh;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    background:
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background:
     linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
     url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg')
     center/cover no-repeat;
 }
 
 .login-container{
-    width:90%;
-    max-width:380px;
-    background:#fff;
-    padding:35px;
-    border-radius:20px;
-    text-align:center;
-    box-shadow:0 15px 40px rgba(0,0,0,.4);
+  width:90%;
+  max-width:380px;
+  background:#fff;
+  padding:35px;
+  border-radius:20px;
+  text-align:center;
+  box-shadow:0 15px 40px rgba(0,0,0,.4);
 }
 
 input{
-    width:100%;
-    padding:14px;
-    margin:10px 0;
-    border-radius:12px;
-    border:2px solid #bbb;
+  width:100%;
+  padding:14px;
+  margin:10px 0;
+  border-radius:12px;
+  border:2px solid #bbb;
 }
 
 button{
-    width:100%;
-    padding:16px;
-    margin-top:10px;
-    background:#3f51b5;
-    color:#fff;
-    border:none;
-    border-radius:12px;
-    font-weight:bold;
-    cursor:pointer;
+  width:100%;
+  padding:16px;
+  margin-top:10px;
+  background:#3f51b5;
+  color:#fff;
+  border:none;
+  border-radius:12px;
+  font-weight:bold;
+  cursor:pointer;
 }
 
 /* QUIZ */
-#quiz-page{display:none}
+#quiz-page{
+  display:none;
+  min-height:100vh;
+}
 
 .header-fixed{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    background:#fff;
-    box-shadow:0 4px 10px rgba(0,0,0,.1);
-    z-index:1000;
-    padding:10px;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  background:#fff;
+  box-shadow:0 4px 10px rgba(0,0,0,.1);
+  z-index:1000;
+  padding:10px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
 }
 
 .timer,.submit-top{
-    padding:10px 18px;
-    border-radius:12px;
-    color:#fff;
-    font-weight:bold;
+  padding:10px 18px;
+  border-radius:12px;
+  color:#fff;
+  font-weight:bold;
 }
 
 .timer{background:#4caf50}
-.submit-top{background:#f44336}
+.submit-top{background:#f44336;cursor:pointer}
 
 .container{
-    max-width:600px;
-    margin:auto;
-    padding:15px;
-    padding-top:90px;
+  max-width:600px;
+  margin:auto;
+  padding:15px;
+  padding-top:90px;
+  padding-bottom:90px;
 }
 
 .question-wrapper{display:none}
 .question-wrapper.active{display:block}
 
 .nav-bottom{
-    position:fixed;
-    bottom:0;
-    left:0;
-    width:100%;
-    background:#fff;
-    display:flex;
-    gap:10px;
-    padding:10px;
-    box-shadow:0 -4px 10px rgba(0,0,0,.1);
+  position:fixed;
+  bottom:0;
+  left:0;
+  width:100%;
+  background:#fff;
+  display:flex;
+  gap:10px;
+  padding:10px;
+  box-shadow:0 -4px 10px rgba(0,0,0,.1);
 }
 .nav-bottom button{flex:1}
 </style>
@@ -106,100 +114,108 @@ button{
 
 <!-- LOGIN -->
 <div id="login-page">
-    <div class="login-container">
-        <h1>Latihan Reading Korea</h1>
-        <p>40 Soal Pilihan Ganda | Waktu: 50 Menit</p>
-        <h2>🔐 Masuk ke Latihan</h2>
-        <input id="username" placeholder="Username / 이름">
-        <input id="password" type="password" placeholder="Password / 비밀번호">
-        <input id="kode" placeholder="Kode Soal / 시험코드">
-        <button id="btnLogin">MULAI / 시작</button>
-    </div>
+  <div class="login-container">
+    <h1>Latihan Reading Korea</h1>
+    <p>40 Soal Pilihan Ganda | Waktu: 50 Menit</p>
+    <h2>🔐 Masuk ke Latihan</h2>
+    <input id="username" placeholder="Username / 이름">
+    <input id="password" type="password" placeholder="Password / 비밀번호">
+    <input id="kode" placeholder="Kode Soal / 시험코드">
+    <button id="btnLogin">MULAI / 시작</button>
+  </div>
 </div>
 
 <!-- QUIZ -->
 <div id="quiz-page">
-    <div class="header-fixed">
-        <div class="submit-top" id="submitTop">SUBMIT</div>
-        <div class="timer" id="timer">50:00</div>
-    </div>
+  <div class="header-fixed">
+    <div class="submit-top" id="submitTop">SUBMIT</div>
+    <div class="timer" id="timer">50:00</div>
+  </div>
 
-    <div class="container">
-        <form id="quiz-form"></form>
-    </div>
+  <div class="container">
+    <form id="quiz-form"></form>
+  </div>
 
-    <div class="nav-bottom">
-        <button id="prev">PREV</button>
-        <button id="next">NEXT</button>
-    </div>
+  <div class="nav-bottom">
+    <button id="prev">PREV</button>
+    <button id="next">NEXT</button>
+  </div>
 </div>
 
 <script>
-document.addEventListener("DOMContentLoaded",function(){
+document.addEventListener("DOMContentLoaded", () => {
+  console.log("DOM READY");
 
-const loginPage=document.getElementById("login-page");
-const quizPage=document.getElementById("quiz-page");
-const btnLogin=document.getElementById("btnLogin");
+  const loginPage = document.getElementById("login-page");
+  const quizPage  = document.getElementById("quiz-page");
+  const btnLogin  = document.getElementById("btnLogin");
 
-const validCredentials={
-    "uus":"123",
-    "kimjong2":"kimju456",
-    "siswa01":"tryout26"
-};
+  const validCredentials = {
+    "uus": "123",
+    "kimjong2": "kimju456",
+    "siswa01": "tryout26"
+  };
 
-const kodeMapping={
-    "A09008":"soal2.json"
-};
+  const kodeMapping = {
+    "A09008": "soal2.json"
+  };
 
-let questions=[],current=0;
+  let questions = [];
+  let current = 0;
 
-btnLogin.addEventListener("click",login);
+  btnLogin.addEventListener("click", () => {
+    const u = username.value.trim();
+    const p = password.value.trim();
+    const k = kode.value.trim().toUpperCase();
 
-function login(){
-    const u=document.getElementById("username").value.trim();
-    const p=document.getElementById("password").value.trim();
-    const k=document.getElementById("kode").value.trim().toUpperCase();
+    console.log("LOGIN CLICK", u, k);
 
-    if(validCredentials[u] && validCredentials[u]===p && kodeMapping[k]){
-        loginPage.style.display="none";
-        quizPage.style.display="block";
-        loadSoal(kodeMapping[k]);
-    }else{
-        alert("Username, Password, atau Kode Soal salah bro!");
+    if (validCredentials[u] && validCredentials[u] === p && kodeMapping[k]) {
+      loginPage.style.display = "none";
+      quizPage.style.display = "block";
+      loadSoal(kodeMapping[k]);
+    } else {
+      alert("Username, Password, atau Kode Soal salah bro!");
     }
-}
+  });
 
-async function loadSoal(file){
-    const res=await fetch(file);
-    questions=await res.json();
-    render();
-    show(0);
-}
+  async function loadSoal(file) {
+    try {
+      const res = await fetch(file + "?t=" + Date.now());
+      questions = await res.json();
+      render();
+      show(0);
+    } catch (e) {
+      alert("Gagal load soal2.json");
+      console.error(e);
+    }
+  }
 
-function render(){
-    const form=document.getElementById("quiz-form");
-    form.innerHTML="";
-    questions.forEach((q,i)=>{
-        const div=document.createElement("div");
-        div.className="question-wrapper";
-        div.innerHTML=`
-        ${q.audio?`<audio controls src="${q.audio}" style="width:100%"></audio>`:""}
-        ${q.image?`<img src="${q.image}" style="max-width:100%">`:""}
-        <p><strong>${q.question}</strong></p>`;
-        form.appendChild(div);
+  function render() {
+    const form = document.getElementById("quiz-form");
+    form.innerHTML = "";
+
+    questions.forEach((q, i) => {
+      const div = document.createElement("div");
+      div.className = "question-wrapper";
+      div.innerHTML = `
+        ${q.audio ? `<audio controls src="${q.audio}" style="width:100%"></audio>` : ""}
+        ${q.image ? `<img src="${q.image}" style="max-width:100%;margin-top:10px">` : ""}
+        <p><strong>${q.question}</strong></p>
+      `;
+      form.appendChild(div);
     });
-}
+  }
 
-function show(n){
-    document.querySelectorAll(".question-wrapper").forEach((q,i)=>{
-        q.classList.toggle("active",i===n);
-    });
-    current=n;
-}
+  function show(n) {
+    document.querySelectorAll(".question-wrapper")
+      .forEach((q, i) => q.classList.toggle("active", i === n));
+    current = n;
+  }
 
-document.getElementById("prev").onclick=()=>current>0&&show(current-1);
-document.getElementById("next").onclick=()=>current<questions.length-1&&show(current+1);
-document.getElementById("submitTop").onclick=()=>alert("SUBMIT OK");
+  prev.onclick = () => current > 0 && show(current - 1);
+  next.onclick = () => current < questions.length - 1 && show(current + 1);
+  submitTop.onclick = () => alert("SUBMIT OK (dummy)");
 
 });
 </script>
