--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@ document.addEventListener("DOMContentLoaded", () => {
   };
 
   const kodeMapping = {
-    "A09008": "soal2.json"
+    "A09008": "soal1.json"
+    "A09018": "soal2.json"
+    "B12345": "soal3.json"
   };
 
   let questions = [];
@@ -222,3 +224,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
