--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@ body{
   box-shadow:0 15px 40px rgba(0,0,0,.4);
 }
 
+.login-container h1{color:#1a237e}
+.login-container h2{color:#4a148c}
+.login-container p{color:#555}
+
 input{
   width:100%;
   padding:14px;
@@ -112,7 +116,7 @@ button{
 
 <body>
 
-<!-- LOGIN -->
+<!-- LOGIN PAGE -->
 <div id="login-page">
   <div class="login-container">
     <h1>Latihan Reading Korea</h1>
@@ -125,7 +129,7 @@ button{
   </div>
 </div>
 
-<!-- QUIZ -->
+<!-- QUIZ PAGE -->
 <div id="quiz-page">
   <div class="header-fixed">
     <div class="submit-top" id="submitTop">SUBMIT</div>
@@ -144,58 +148,65 @@ button{
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
-  console.log("DOM READY");
 
+  /* ====== ELEMENT ====== */
   const loginPage = document.getElementById("login-page");
   const quizPage  = document.getElementById("quiz-page");
   const btnLogin  = document.getElementById("btnLogin");
+  const form      = document.getElementById("quiz-form");
 
+  /* ====== LOGIN DATA ====== */
   const validCredentials = {
     "uus": "123",
     "kimjong2": "kimju456",
-    "siswa01": "tryout26"
+    "siswa01": "tryout26",
+    "koreafan": "hanguk789",
+    "topik2026": "seoul2026"
   };
 
+  /* ====== KODE MAPPING (TIDAK DIUBAH) ====== */
   const kodeMapping = {
-    "A09008": "soal2.json"
+    "B12345": "soal1.json",
+    "A09008": "soal2.json",
+    "W11765": "soal3.json",
+    "H66633": "soal4.json"
   };
 
   let questions = [];
   let current = 0;
 
+  /* ====== LOGIN ====== */
   btnLogin.addEventListener("click", () => {
     const u = username.value.trim();
     const p = password.value.trim();
     const k = kode.value.trim().toUpperCase();
 
-    console.log("LOGIN CLICK", u, k);
-
     if (validCredentials[u] && validCredentials[u] === p && kodeMapping[k]) {
       loginPage.style.display = "none";
-      quizPage.style.display = "block";
+      quizPage.style.display  = "block";
       loadSoal(kodeMapping[k]);
     } else {
       alert("Username, Password, atau Kode Soal salah bro!");
     }
   });
 
-  async function loadSoal(file) {
-    try {
+  /* ====== LOAD SOAL ====== */
+  async function loadSoal(file){
+    try{
       const res = await fetch(file + "?t=" + Date.now());
       questions = await res.json();
       render();
       show(0);
-    } catch (e) {
-      alert("Gagal load soal2.json");
+    }catch(e){
+      alert("Gagal load file soal!");
       console.error(e);
     }
   }
 
-  function render() {
-    const form = document.getElementById("quiz-form");
+  /* ====== RENDER ====== */
+  function render(){
     form.innerHTML = "";
-
-    questions.forEach((q, i) => {
+    questions.forEach((q,i)=>{
       const div = document.createElement("div");
       div.className = "question-wrapper";
       div.innerHTML = `
@@ -207,15 +218,16 @@ document.addEventListener("DOMContentLoaded", () => {
     });
   }
 
-  function show(n) {
+  function show(n){
     document.querySelectorAll(".question-wrapper")
-      .forEach((q, i) => q.classList.toggle("active", i === n));
+      .forEach((q,i)=>q.classList.toggle("active",i===n));
     current = n;
   }
 
-  prev.onclick = () => current > 0 && show(current - 1);
-  next.onclick = () => current < questions.length - 1 && show(current + 1);
-  submitTop.onclick = () => alert("SUBMIT OK (dummy)");
+  /* ====== NAV ====== */
+  prev.onclick = ()=> current>0 && show(current-1);
+  next.onclick = ()=> current<questions.length-1 && show(current+1);
+  submitTop.onclick = ()=> alert("SUBMIT (dummy)");
 
 });
 </script>
